added tests with resourses